--- a/README
+++ b/README
@@ -11,15 +11,17 @@ With help from:
 Junho Ahn - 2012
 
 ---Folders---
-handout - Assignment description and documentation
+handout     - Assignment description and documentation.
 
 ---Executables---
-./testscript - A simple bash script for running a few sample test cases.
-./pi - A simple program for statistically calculating pi.
-./pi-sched - A simple program for statistically calculating pi using
-             a specific scheduling policy.
-./rw - A simple I/O bound example program.
-./rr_quantum - A simple program for determining the RR quantum.
+ testscript - A simple bash script for running a few sample test cases.
+ pi         - A simple program for statistically calculating pi.
+ pi-sched   - A simple program for spawning N pi processes using a
+              specific scheduling policy.
+ rw         - A simple I/O bound example program.
+ rw-sched   - A simple program for spawning N rw processes using a
+              specific scheduling policy.
+ rr_quantum - A simple program for determining the RR quantum.
 
 ---Examples---
 Build:
@@ -34,8 +36,9 @@ pi:
 
 pi-sched:
  ./pi-sched
- ./pi-sched <Number of Iterations>
- ./pi-sched <Number of Iterations> <Scheduling Policy>
+ ./pi-sched <# Iterations>
+ ./pi-sched <# Iterations> <Scheduling Policy>
+ ./pi-sched <# Iterations> <Scheduling Policy> <# Child Processes>
 
 rw:
  ./rw
@@ -44,8 +47,17 @@ rw:
  ./rw <#Bytes to Write to Output File> <Block Size> <Input Filename>
  ./rw <#Bytes to Write to Output File> <Block Size> <Input Filename> <Output Filename>
 
+rw-sched:
+ ./rw-sched
+ ./rw-sched <#Bytes to Write to Output File>
+ ./rw-sched <#Bytes to Write to Output File> <Block Size>
+ ./rw-sched <#Bytes to Write to Output File> <Block Size> <Input Filename>
+ ./rw-sched <#Bytes to Write to Output File> <Block Size> <Input Filename> <Output Filename> <Scheduling Policy>
+ ./rw-sched <#Bytes to Write to Output File> <Block Size> <Input Filename> <Output Filename> <Scheduling Policy> <# Child Processes>
+
 testscript:
  ./testscript
+ sudo ./testscript
 
 rr_quantum:
  sudo ./rr_quantum
