Rearrange some minor report items

--- a/report/report.tex
+++ b/report/report.tex
@@ -23,46 +23,34 @@
 %%%%% Begin Title Page %%%%%
 \maketitle
 
-%%%%% Begin Abstract %%%%%
+%%%%% Begin Abstract (Vertically Centered) %%%%%
 \clearpage
 \vspace*{\fill}
-\begin{abstract}
-    \input{tex/abstract.tex}
-\end{abstract}
+\input{tex/abstract.tex}
 \vspace*{\fill}
 
 %%%%% Begin Main Sections %%%%%
 \clearpage
-\section{Introduction}
 \input{tex/introduction.tex}
 
-\section{Method}
 \input{tex/method.tex}
 
-\section{Results}
 \input{tex/results.tex}
 
-\section{Analysis}
 \input{tex/analysis.tex}
 
-\section{Conclusion}
 \input{tex/conclusion.tex}
 
 \clearpage
-\begin{thebibliography}{9}      % Allows up to  9 references (# of digits)
-%\begin{thebibliography}{56}     % Allows up to 99 references (# of digits)
 \input{tex/references.tex}
-\end{thebibliography}
 
 %%%%% Begin Appendices %%%%%
 \appendix
 
 \clearpage
-\section{Appendix}
 \input{tex/appendixA.tex}
 
 \clearpage
-\section{Appendix}
 \input{tex/appendixB.tex}
 
 \end{document}
