--- a/report/tex/references.tex
+++ b/report/tex/references.tex
@@ -1,3 +1,7 @@
+% The second parameter dictates how many digits to use for references
+\begin{thebibliography}{9}      % Allows up to 9 references
+%\begin{thebibliography}{56}     % Allows up to 99 references
+
 \bibitem{Jones-InsideCFS} Jones, M. Tim.
   \newblock \emph{Inside the Linux 2.6 Completely Fair Scheduler}.
   \newblock IBM developerWorks: 2009.
@@ -48,3 +52,5 @@
   \newblock \emph{The Elements of Style}.
   \newblock Fourth Edition: 2000.
   \newblock Pearson: New York.
+
+\end{thebibliography}
