Mostly written Method section

--- a/report/report.tex
+++ b/report/report.tex
@@ -8,6 +8,7 @@
 \usepackage[text={6.5in, 9in}, centering]{geometry}
 \usepackage{graphicx}
 \usepackage{url}
+\usepackage{amsfonts}
 
 \title{Programming Assignment 3:\\Investigating the Linux Scheduler}
 \author{
