--- a/report/tex/references.tex
+++ b/report/tex/references.tex
@@ -2,6 +2,23 @@
 \begin{thebibliography}{9}      % Allows up to 9 references
 %\begin{thebibliography}{56}     % Allows up to 99 references
 
+\bibitem{Sayler-pi} Sayler, Andy.
+  \newblock \emph{pi.c}.
+  \newblock 03/09/2012.
+  \newblock Forked 03/17/2013.
+  \newblock \url{https://github.com/asayler/CU-CS3753-PA3/blob/master/pi.c}.
+
+\bibitem{Sayler-PDF} Sayler, Andy.
+  \newblock \emph{Programming Assignment 3: Investigating the Linux Scheduler}.
+  \newblock 03/06/2012
+  \newblock \url{https://github.com/cgartrel/CU-CS3753-PA3/blob/master/handout/pa3.pdf}.
+
+\bibitem{man-open} Linux man-pages project.
+  \newblock \emph{open(2)}.
+  \newblock 2013/02/18.
+  \newblock Access 03/23/2013.
+  \newblock \url{http://man7.org/linux/man-pages/man2/open.2.html}.
+
 \bibitem{Jones-InsideCFS} Jones, M. Tim.
   \newblock \emph{Inside the Linux 2.6 Completely Fair Scheduler}.
   \newblock IBM developerWorks: 2009.
@@ -42,15 +59,5 @@
   \newblock 2007.
   \newblock Accessed 06/01/12.
   \newblock \url{http://people.redhat.com/mingo/cfs-scheduler/sched-design-CFS.txt}.
-
-\bibitem{tubes} Stevens, Ted.
-  \newblock \emph{Speech on Net Neutrality Bill}.
-  \newblock 2006.
-  \newblock \url{http://youtu.be/f99PcP0aFNE}.
-
-\bibitem{StrunkWhite} Strunk, William, Jr. and White, E.B.
-  \newblock \emph{The Elements of Style}.
-  \newblock Fourth Edition: 2000.
-  \newblock Pearson: New York.
 
 \end{thebibliography}
