Method done, start results

--- a/report/report.tex
+++ b/report/report.tex
@@ -9,6 +9,7 @@
 \usepackage{graphicx}
 \usepackage{url}
 \usepackage{amsfonts}
+\usepackage{float}
 
 \title{Programming Assignment 3:\\Investigating the Linux Scheduler}
 \author{
