--- a/report/tex/method.tex
+++ b/report/tex/method.tex
@@ -1,6 +1,6 @@
 \section{Method}
 
-\subsection*{Benchmarks}
+\subsection{Benchmarks}
 
 Three benchmarks were written, each testing one of the three possible program types: CPU bound, I/O bound, and a mix of the two.  In creating the CPU bound benchmark, some computationally intensive algorithm had to be chosen such that no time would be spent waiting on I/O operations or blocked on any other resource.  As a result of these constraints, the statistical algorithm for calculating the value of pi based on the Monte Carlo method was chosen\cite{Sayler-pi}.  This algorithm is relatively slow and very CPU intensive.  It creates an imaginary quarter circle of radius RAND\_MAX, generates a random pair (x,y) of coordinates $\{x,y \in \mathbb{R}\ |\ 0 \le x,y \le RAND\_MAX\}$, then calculates whether the (x,y) coordinate is within the quarter circle.  Additionally, there are two counters: one that keeps track of the total number of iterations and another that keeps track of the number of times the random (x,y) coordinate is found to be within the quarter circle.  Finally, once all iterations are complete, all that must be done is to calculate the probability of being in the quarter circle by dividing the two counters (inside circle divided by number of iterations) and multiplying the result by 4 to create a full circle rather than a quarter circle.
 
@@ -10,7 +10,9 @@ The third and final benchmark program was the mixed benchmark.  I wrote this ben
 
 For each benchmark, I wrote another program that took care of setting the correct scheduling algorithm and \texttt{fork()}ing the desired number of processes.  Each time a process needs to read from or write to a file, it needs its own input or output file in order to prevent additional waiting due to mutual exclusions and not actual I/O as is desired; the housekeeping programs ensure that each process has its own unique input/output file.
 
-Finally, I wrote a Bash script to take care of automation for running the 27 different test cases.  Through the use of nested \texttt{for} loops and the \texttt{time} command, I gathered results for each of the test cases.  From the \texttt{time} command I gathered the following information:
+\subsection{Testing and Data}
+
+I wrote a Bash script to take care of automation for running the 27 different test cases.  Additionally, each test case was run three times and the results were averaged in order to get more accurate data.  Through the use of the \texttt{time} command and nested \texttt{for} loops iterating over both the number of child processes to \texttt{fork()} and the scheduling algorithm, I gathered results for each of the test cases.  From the \texttt{time} command I gathered the following aggregate information for each set of processes:
 \begin{itemize}
   \item Wall time (turnaround time) - the real time the process took to complete from when it entered the system to when it completed
   \item User time - the amount of CPU-seconds the process spent executing in user mode
@@ -20,4 +22,6 @@ Finally, I wrote a Bash script to take care of automation for running the 27 dif
   \item The number of times the process was blocked on I/O
 \end{itemize}
 
-100000000
+\subsection{Test System}
+
+All of the tests were run on a desktop running 64-bit Linux Mint 14 Nadia with version \texttt{3.5.0-26-generic} of the Linux kernel.  This all runs on a quad-core Intel Core i5-2500K CPU running at 3.30GHz with 8GB of RAM.  Each core is capable of executing a single hardware thread; thus four processes may be running concurrently in this system.  The primary disk for the system is a 1TB 7200 RPM Western Digital with 32MB of cache which uses the SATA II interface.  All of the programs were compiled using \texttt{GNU C Compiler version 4.7.2 (Ubuntu/Linaro 4.7.2-2ubuntu1)}.
