Add RR time slice info to Test System

--- a/report/tex/method.tex
+++ b/report/tex/method.tex
@@ -1,4 +1,4 @@
-\section{Method}
+﻿\section{Method}
 
 \subsection{Benchmarks}
 
@@ -24,4 +24,4 @@ I wrote a Bash script to take care of automation for running the 27 different te
 
 \subsection{Test System}
 
-All of the tests were run on a desktop running 64-bit Linux Mint 14 Nadia with version \texttt{3.5.0-26-generic} of the Linux kernel.  This all runs on a quad-core Intel Core i5-2500K CPU running at 3.30GHz with 8GB of RAM.  Each core is capable of executing a single hardware thread; thus four processes may be running concurrently in this system.  The primary disk for the system is a 1TB 7200 RPM Western Digital with 32MB of cache which uses the SATA II interface.  All of the programs were compiled using \texttt{GNU C Compiler version 4.7.2 (Ubuntu/Linaro 4.7.2-2ubuntu1)}.
+All of the tests were run on a desktop running 64-bit Linux Mint 14 Nadia with version \texttt{3.5.0-26-generic} of the Linux kernel.  This all runs on a quad-core Intel Core i5-2500K CPU running at 3.30GHz with 8GB of RAM.  Each core is capable of executing a single hardware thread; thus four processes may be running concurrently in this system.  The primary disk for the system is a 1TB 7200 RPM Western Digital with 32MB of cache which uses the SATA II interface.  All of the programs were compiled using \texttt{GNU C Compiler version 4.7.2 (Ubuntu/Linaro 4.7.2-2ubuntu1)}.  The time slice for the Round Robin scheduling algorithm for this setup is 0.1000006 seconds.
