Smaller graph size

--- a/report/tex/results.tex
+++ b/report/tex/results.tex
@@ -1,14 +1,13 @@
-\section{Results}
+﻿\section{Results}
 
 This is some introduction text.
 
 \begin{figure}[H]
 %\begin{figure}[hbtp]
-  \begin{center}
-    \includegraphics[scale=1.0]{img/cpu-wall-child.eps}
-    \caption{}
-    \label{cpu-wall-child}
-  \end{center}
+  \centering
+  \includegraphics[scale=1.0]{img/cpu-wall-child.eps}
+  \caption{}
+  \label{cpu-wall-child}
 \end{figure}
 
 This comes after the image. Where is it?
