Code included (colored), started results section

--- a/report/tex/appendixA.tex
+++ b/report/tex/appendixA.tex
@@ -1,2 +1,16 @@
-\section{Appendix - Raw Data}
+﻿\section{Appendix - Raw Data}
+
+\begin{figure}[hbtp]
+  \centering
+  \caption{}
+  \includegraphics[scale=0.8]{img/raw-results-table.eps}
+  \label{tab:raw-results}
+\end{figure}
+
+\begin{figure}[hbtp]
+  \centering
+  \caption{}
+  \includegraphics[scale=0.8]{img/raw-results-child-table.eps}
+  \label{tab:raw-results-child}
+\end{figure}
 
