--- a/report/tex/results.tex
+++ b/report/tex/results.tex
@@ -1,13 +1,27 @@
 ﻿\section{Results}
 
-This is some introduction text.
+Using the methodology described above, I gathered the results found in Figure~\ref{fig:cpu-wall-child}.  
 
 \begin{figure}[H]
 %\begin{figure}[hbtp]
   \centering
-  \includegraphics[scale=1.0]{img/cpu-wall-child.eps}
+  \includegraphics[scale=0.8]{img/cpu-wall-child.eps}
   \caption{}
-  \label{cpu-wall-child}
+  \label{fig:cpu-wall-child}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.8]{img/io-wall-child.eps}
+  \caption{}
+  \label{fig:io-wall-child}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.8]{img/mix-wall-child.eps}
+  \caption{}
+  \label{fig:mix-wall-child}
 \end{figure}
 
 This comes after the image. Where is it?
