--- a/report/report.tex
+++ b/report/report.tex
@@ -5,11 +5,15 @@
 
 \documentclass[12pt]{article}
 
-\usepackage[text={6.5in, 9in}, centering]{geometry}
+%\usepackage[text={6.5in, 9in}, centering]{geometry}
+%\usepackage[top=1in,bottom=1in,right=1.0in,left=1.0in]{geometry}
+\usepackage[margin=1.0in]{geometry}
 \usepackage{graphicx}
-\usepackage{url}
-\usepackage{amsfonts}
-\usepackage{float}
+\usepackage{url}        % \url{}
+\usepackage{amsfonts}   % \mathbb
+\usepackage{float}      % H figure placement specifier
+\usepackage{listings}   % Input code from file directly
+\usepackage{xcolor}     % Allow colored code
 
 \title{Programming Assignment 3:\\Investigating the Linux Scheduler}
 \author{
@@ -53,6 +57,8 @@
 \input{tex/appendixA.tex}
 
 \clearpage
+\newgeometry{top=1in,bottom=1in,right=0.5in,left=0.5in}
 \input{tex/appendixB.tex}
+\restoregeometry
 
 \end{document}
