Added more results graphs

--- a/report/tex/analysis.tex
+++ b/report/tex/analysis.tex
@@ -1,2 +1,3 @@
-\section{Analysis}
+﻿\section{Analysis}
 
+Negative correlation wall time could be attributed to higher parallelism between CPU and I/O.
