--- a/report/report.tex
+++ b/report/report.tex
@@ -14,6 +14,7 @@
 \usepackage{float}      % H figure placement specifier
 \usepackage{listings}   % Input code from file directly
 \usepackage{xcolor}     % Allow colored code
+\usepackage[section]{placeins}  % Defines \FloatBarrier and optionally redefines \section to include \FloatBarrier
 
 \title{Programming Assignment 3:\\Investigating the Linux Scheduler}
 \author{
@@ -58,7 +59,7 @@
 
 \clearpage
 \newgeometry{top=1in,bottom=1in,right=0.5in,left=0.5in}
-\input{tex/appendixB.tex}
+%\input{tex/appendixB.tex}
 \restoregeometry
 
 \end{document}
