Results section finished

--- a/report/report.tex
+++ b/report/report.tex
@@ -15,6 +15,7 @@
 \usepackage{listings}   % Input code from file directly
 \usepackage{xcolor}     % Allow colored code
 \usepackage[section]{placeins}  % Defines \FloatBarrier and optionally redefines \section to include \FloatBarrier
+\usepackage{subcaption} % Allows subfigures
 
 \title{Programming Assignment 3:\\Investigating the Linux Scheduler}
 \author{
