Wall time figures title fix

--- a/report/tex/results.tex
+++ b/report/tex/results.tex
@@ -89,7 +89,7 @@ The throughput results in Figure~\ref{fig:io-thruput-child} on page~\pageref{fig
   \label{fig:io-thruput-child}
 \end{figure}
 
-The throughput results in Figure~\ref{fig:mix-thruput-child} on page~\pageref{fig:mix-thruput-child} show a similar overall positive correlation between number of processes and throughput to the I/O throughput results.  However, at higher numbers of processes, the SCHED\_OTHER scheduling algorithm seems to show a slight lead, similar to what is seen at lower numbers of running processes in Figure~\ref{fig:cpu-thruput-child} on page~\pageref{fig:cpu-thruput-child}.
+The throughput results in Figure~\ref{fig:mix-thruput-child} on page~\pageref{fig:mix-thruput-child} show a similar overall positive correlation between number of processes and throughput to the I/O throughput results.  However, at higher numbers of processes, the SCHED\_OTHER scheduling algorithm seems to show a slight lead, similar to what is seen at lower system utilization in Figure~\ref{fig:cpu-thruput-child} on page~\pageref{fig:cpu-thruput-child}.
 
 \begin{figure}[H]
   \centering
