--- a/report/tex/references.tex
+++ b/report/tex/references.tex
@@ -2,13 +2,25 @@
 \begin{thebibliography}{9}      % Allows up to 9 references
 %\begin{thebibliography}{56}     % Allows up to 99 references
 
-\bibitem{Sayler-pi} Sayler, Andy.
+\bibitem{sayler-pi} Sayler, Andy.
   \newblock \emph{pi.c}.
   \newblock 03/09/2012.
   \newblock Forked 03/17/2013.
   \newblock \url{https://github.com/asayler/CU-CS3753-PA3/blob/master/pi.c}.
 
-\bibitem{Sayler-PDF} Sayler, Andy.
+\bibitem{sayler-pi-sched} Sayler, Andy.
+  \newblock \emph{pi-sched.c}.
+  \newblock 03/09/2012.
+  \newblock Forked 03/17/2013.
+  \newblock \url{https://github.com/asayler/CU-CS3753-PA3/blob/master/pi-sched.c}.
+
+\bibitem{sayler-rw} Sayler, Andy.
+  \newblock \emph{rw.c}.
+  \newblock 03/09/2012.
+  \newblock Forked 03/17/2013.
+  \newblock \url{https://github.com/asayler/CU-CS3753-PA3/blob/master/rw.c}.
+
+\bibitem{sayler-pdf} Sayler, Andy.
   \newblock \emph{Programming Assignment 3: Investigating the Linux Scheduler}.
   \newblock 03/06/2012
   \newblock \url{https://github.com/cgartrel/CU-CS3753-PA3/blob/master/handout/pa3.pdf}.
@@ -16,48 +28,7 @@
 \bibitem{man-open} Linux man-pages project.
   \newblock \emph{open(2)}.
   \newblock 2013/02/18.
-  \newblock Access 03/23/2013.
+  \newblock Accessed 03/23/2013.
   \newblock \url{http://man7.org/linux/man-pages/man2/open.2.html}.
-
-\bibitem{Jones-InsideCFS} Jones, M. Tim.
-  \newblock \emph{Inside the Linux 2.6 Completely Fair Scheduler}.
-  \newblock IBM developerWorks: 2009.
-  \newblock Accessed 06/01/12.
-  \newblock \url{http://www.ibm.com/developerworks/linux/library/l-completely-fair-scheduler/}.
-
-\bibitem{K&R} Kernighan, Brian and Dennis, Ritchie.
-  \newblock \emph{The C Programming Language}.
-  \newblock Second Edition: 2009.
-  \newblock Prentice Hall: New Jersey.
-
-\bibitem{Kolivas-BFS} Kolivas, Con.
-  \newblock \emph{BFS - The Brain Fuck Scheduler}.
-  \newblock 2009.
-  \newblock Accessed 06/01/12.
-  \newblock \url{http://ck.kolivas.org/patches/bfs/sched-BFS.txt}.
-
-\bibitem{Kolivas-BFSFAQ} Kolivas, Con.
-  \newblock \emph{FAQS about BFS}.
-  \newblock v0.330: 2009.
-  \newblock Accessed 06/01/12.
-  \newblock \url{http://ck.kolivas.org/patches/bfs/bfs-faq.txt}.
-
-\bibitem{Kumar-MultiCFS} Kumar, Avinesh.
-  \newblock \emph{Multiprocessing with the Completely Fair Scheduler}.
-  \newblock IBM developerWorks: 2008.
-  \newblock Accessed 06/01/12.
-  \newblock \url{http://www.ibm.com/developerworks/linux/library/l-cfs/}.
-
-\bibitem{Le-StudyLKS} Le, Thang Minh.
-  \newblock \emph{A Study on Linux Kernel Scheduler: version 2.6.32}.
-  \newblock 2009.
-  \newblock Accessed 06/01/12.
-  \newblock \url{http://www.scribd.com/thangmle/d/24111564-Project-Linux-Scheduler-2-6-32}.
-
-\bibitem{Molnar-CFS} Molnar, Ingo.
-  \newblock \emph{This is the CFS scheduler}.
-  \newblock 2007.
-  \newblock Accessed 06/01/12.
-  \newblock \url{http://people.redhat.com/mingo/cfs-scheduler/sched-design-CFS.txt}.
 
 \end{thebibliography}
