Conclusion, introduction, abstract complete

--- a/report/report.tex
+++ b/report/report.tex
@@ -60,7 +60,7 @@
 
 \clearpage
 \newgeometry{top=1in,bottom=1in,right=0.5in,left=0.5in}
-%\input{tex/appendixB.tex}
+\input{tex/appendixB.tex}
 \restoregeometry
 
 \end{document}
