--- a/report/tex/conclusion.tex
+++ b/report/tex/conclusion.tex
@@ -1,2 +1,3 @@
-\section{Conclusion}
+﻿\section{Conclusion}
 
+The purpose of this investigation into the Linux Scheduler was to determine how each scheduling algorithm performed under various circumstances.  The real-time scheduling algorithms SCHED\_RR and SCHED\_FIFO proved to be best suited for processes that involved performing a lot of I/O operations.  SCHED\_RR performed the best or equally as well for I/O bound processes under all levels of system utilization.  For CPU bound processes, SCHED\_OTHER was clearly the optimal scheduling algorithm.  For low to medium levels of system utilization, the wall time was significantly less, and for high system utilization the wall time was still slightly lower.  Additionally, the SCHED\_OTHER scheduling algorithm was able to maximize throughput and CPU usage.  Lastly, for mixed processes that involved both computationally and I/O intensive sections there proved to be no clear best scheduling policy.  The results support SCHED\_OTHER slightly more than SCHED\_FIFO and least of all SCHED\_RR.  These results lend themselves to the theory that the mixed benchmark was written to be more CPU bound than I/O bound.
