--- a/report/tex/introduction.tex
+++ b/report/tex/introduction.tex
@@ -1,2 +1,4 @@
-\section{Introduction}
+﻿\section{Introduction}
 
+The purpose of this investigation into the Linux scheduler is to discover and discuss the differences among the various scheduling algorithms.  To do this, I will write three test programs \texttt{pi.c}, \texttt{rw.c} and \texttt{mix.c}, each representative of a different type of real world program.  The test system will then be loaded with multiple instances of these programs in order to produce various levels of system utilization.  The processes will be scheduled using specified scheduling policies.  Using the Linux \texttt{time} command, information about the run-time and execution of the benchmarks will be gathered.  All tests will be run on a desktop computer running 64-bit Linux Mint 14 Nadia with version
+3.5.0-26-generic of the Linux kernel.
