--- a/report/tex/method.tex
+++ b/report/tex/method.tex
@@ -6,7 +6,8 @@ Three benchmarks were written, each testing one of the three possible program ty
 
 The I/O bound benchmark \texttt{rw.c} was written in such a way as to ``minimize the effects of filesystem buffering and maximize I/O delays''\cite{sayler-pdf}.  In order to do this, the low level-level \texttt{read()} and \texttt{write()} system calls were used in conjunction with files opened in O\_SYNC mode.  O\_SYNC causes \texttt{write()} operations to block until the data is physically written to the disk rather than until the data is simply copied to a kernel buffer\cite{man-open}.  An input file and an output file are given to the program which then reads blocks of data from the input file and writes said data to the output file.  This process occurs multiple times with minimal CPU involvement, thus creating the I/O bound benchmark.  There is only a small amount of CPU use involved, primarily in setting up the input/output files and verifying the passed parameters.
 
-The third and final benchmark program was the mixed benchmark  \texttt{mix.c}.  I wrote this benchmark as a combination of the ideas from the previous two benchmarks.  The program performs the same computation as the CPU bound process statistically calculating the value of pi, but every so many iterations it writes the current values of the counters and the estimated value of pi to a file.  This \texttt{write()} operation once again uses O\_SYNC mode to maximize I/O delays.
+The third and final benchmark program was the mixed benchmark \texttt{mix.c}.
+I wrote this benchmark such that it involves both computationally and I/O intensive sections.  The program performs the same computation as the CPU bound process statistically calculating the value of pi, but every so many iterations it writes the current values of the counters and the estimated value of pi to a file.  This \texttt{write()} operation is once again performed using O\_SYNC mode to maximize I/O delays.
 
 For each benchmark, I wrote a separate program (e.g. \texttt{rw-sched.c} for I/O benchmark, \texttt{pi-sched.c} for CPU benchmark\cite{sayler-pi-sched}, etc.) that took care of setting the correct scheduling policy and \texttt{fork()}ing the desired number of child processes.  Each time a process needs to read from or write to a file, it needs its own input or output file in order to prevent additional waiting due to mutual exclusions and not actual I/O as is desired; the housekeeping programs ensure that each process has its own unique input/output file.
 
